@@ -10,7 +10,6 @@ keywords = ["audio", "song", "similarity"]
 readme = "README.md"
 
 [dependencies]
-bliss-audio = { version = "0.9.3", features = ["ffmpeg", "aubio-static"] }
 argparse = "0.2.2"
 anyhow = "1.0.40"
 rusqlite = { version = "0.25.0", features = ["bundled"] }
@@ -26,3 +25,10 @@ ureq = "2.4.0"
 configparser = "3.0.0"
 if_chain = "1.0.2"
 num_cpus = "1.13.0"
+md5 = "0.7.0"
+hound = "3.5.1"
+
+[dependencies.bliss-audio]
+default-features = false
+features = ["aubio-static"]
+version = "0.9.4"
